fix sub-menu being cut off right side of screen

--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -77,6 +77,7 @@
             > li,
             li a {
                 width: 100%;
+                white-space: normal;
             }
             li {
                 &:hover > ul,
@@ -142,6 +143,7 @@
             li:hover > ul,
             li.focus > ul {
                 left: auto;
+                right: -100%;
             }
 
             .sub-menu {
